# license-scanner

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  GNUmakefile  README.md  REUSE.toml  pyproject.toml  ruff.toml
scripts/: generate-test-data.py  generate-top100.py  top100.py  uvlock.py
src/license_scanner/: __init__.py  __main__.py  cli.py  pypi.py  scanner.py
tests/: test_cli.py  test_integration.py  test_package_licenses.py  test_scan_directory.py  test_scan_distributions.py  test_version.py
