[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/license_scanner/__about__.py"

[project]
dynamic = ["version"]

description = "license_scanner"
keywords = []
license = "MIT"
name = "license_scanner"
readme = "README.md"
requires-python = ">=3.11"

urls.Documentation = "https://github.com/pcastellazzi/license-scanner.git#readme"
urls.Issues = "https://github.com/pcastellazzi/license-scanner.git/issues"
urls.Repository = "https://github.com/pcastellazzi/license-scanner.git"

authors = [
    {name = "Pablo Castellazzi", email = "pablo.castellazzi@icloud.com"},
]
maintainers = [
    {name = "Pablo Castellazzi", email = "pablo.castellazzi@icloud.com"},
]

classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers

    "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",

    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: Unix",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",

    "Topic :: Utilities",
]

dependencies = ["packaging>=24.2", "trove-classifiers>=2025.3.19.19"]

[dependency-groups]
dev = ["covdefaults>=2.3", "coverage>=7.7", "pytest-cov>=6.0", "pytest>=8.3"]

[tool.pytest.ini_options]
addopts = ["--quiet", "--strict-markers", "-Werror"]

[tool.uv]
python-preference = "only-managed"
